adlatus-ci-cd/cd/deploy/overlays/test/modules/api-gate/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gate-deployment
  namespace: adl
spec:
  template:
    spec:
      containers:
        - name: api-gate
          env:
          - name: SPRING_PROFILES_ACTIVE
            value: "testenv"
          - name: CONFIG_SERVER
            value: http://config-server-service-test.adl-test.svc.cluster.local:8888
