adlatus-ci-cd/cd/deploy/overlays/test/modules/api-gate/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gate-ingress
  namespace: adl
spec:
  ingressClassName: adl-ingress-nginx
  tls:
    - hosts:
      - api-gate.adl-test.dev.bitconex.com
      secretName: tls-secret-api-gate
  rules:
    - host: api-gate.adl-test.dev.bitconex.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-gate-service-test
                port:
                  number: 80
